# analytics-platform-dagster

./: .gitignore  README.md  dagster.local.yaml  dagster.yaml  docker-compose.yaml  makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: safegaurds.yml
analytics_platform_dagster/: __init__.py  assets.py
analytics_platform_dagster/assets/: README.md  analytics_platform_assets_1.py  analytics_platform_datastore_assets.py  analytics_platform_dbt_assets.py  analytics_platform_ea_assets.py  analytics_platform_london_datastore.py  analytics_platform_os_assets.py
analytics_platform_dagster/assets/catalogue_metadata_assets/: analytics_platform_datastore_assets.py  london_datastore.py  ukpn_datastore_roadmap.py
analytics_platform_dagster/assets/energy_data_assets/: analytics_platform_carbon_intensity_assets.py  entose_uk_electricity.py  entsog_gas_assets.py  entsog_uk_gas_assets.py  renewable_energy_planning.py  uk_power_networks_live_faults.py  ukpn_smart_metres.py
analytics_platform_dagster/assets/environment_data_assets/: analytics_platform_ea_assets.py  analytics_platform_ea_flood_areas.py  green_belt.py  (+2 more)
analytics_platform_dagster/ideas/: analytics_platform_london_datastore_test.py
analytics_platform_dagster/jobs/: analytics_platfom_job_1.py  analytics_platfom_jobs.py
analytics_platform_dagster/utils/: duckdb_helper.py  io_manager.py  requests_helper.py  url_links.py
images/: Dockerfile.dagster-daemon  Dockerfile.dagster-webserver  Dockerfile.gitsync  sync-script.sh
streamlit_app/: main.py
streamlit_app/functions/: delta_lake.py
(+27 files in other folders)
